--- a/Lab2/part1.html
+++ b/Lab2/part1.html
@@ -21,16 +21,39 @@
 			document.body.appendChild(renderer.domElement);
 
 			var geometry = new THREE.BoxGeometry();
-			var material = new THREE.MeshBasicMaterial( {color: 0x00ff00} );
-			     	var cube = new THREE.Mesh(geometry, material);
+			var geometry2 = new THREE.BoxGeometry();
+		    var geometry3 = new THREE.BoxGeometry();
+
+			var material = new THREE.MeshBasicMaterial( {color:0x33FFD4 } );
+			var material2 = new THREE.MeshBasicMaterial( {color:0xFACADE } );
+			var material3 = new THREE.MeshBasicMaterial( {color: 0xD35400 } );
+
+
+			var cube = new THREE.Mesh(geometry, material);
+			var cube2 = new THREE.Mesh(geometry2,material2);
+			var cube3 = new THREE.Mesh(geometry3,material3);
+
+			cube2.position.x+=3;
+			cube3.position.x -=3;
 			scene.add(cube);
+			scene.add(cube2);
+			scene.add(cube3);
 			camera.position.z = 5; //this moves the camera towards the viewer
 			
 			function animate() {
+				geometry.rotateX(0.01);
+				geometry.rotateY(0.01);
+				geometry2.rotateZ(0.01);
+				geometry2.rotateX(-0.02);
+				geometry3.translate(0.005,0.005,0.005);
+				geometry3.rotateY(-.01);
 				requestAnimationFrame(animate);
 				renderer.render(scene, camera);
 				}
 			animate();
+
+			
+
 
 
 
